--- a/schedule.html
+++ b/schedule.html
@@ -217,6 +217,12 @@ $(document).ready(function () {
     <li>
       <a href="LECTURE8.html">Stochastic population models</a>
     </li>
+    <li>
+      <a href="LECTURE9.html">Small population paradigm</a>
+    </li>
+    <li>
+      <a href="LECTURE10.html">Declining population paradigm</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -239,7 +245,7 @@ $(document).ready(function () {
       <a href="LAB4.html">Lab 4: matrix population models (short)</a>
     </li>
     <li>
-      <a href="LAB5.html">Lab 5: stochasticity and uncertainty (short)</a>
+      <a href="LAB5.html">Lab 5: stochasticity and uncertainty</a>
     </li>
     <li>
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
@@ -355,7 +361,7 @@ $(document).ready(function () {
 <td align="left">Week 5</td>
 <td align="left">2/21/2017</td>
 <td align="left">LECTURE 1: Stochasticity and Uncertainty</td>
-<td align="left"><a href="lande.pdf">Lande 1992</a> and <a href="Regan_2002.pdf">Regan 2002</a></td>
+<td align="left"><a href="lande.pdf">Lande 1992</a></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
@@ -366,25 +372,25 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left"></td>
 <td align="left">2/24/2017</td>
-<td align="left">LAB: Stochasticity (short) and Group projects (instructors away- Nathan Cook will be present)</td>
+<td align="left">LAB: Group projects (instructors away- Nathan Cook will be present)</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 6</td>
 <td align="left">2/28/2017</td>
-<td align="left">LECTURE 1: Population Viability Analysis; Small population paradigm</td>
-<td align="left"><a href="beissinger1.pdf">Beissinger and Westphal 1998</a></td>
+<td align="left">LECTURE 1: Stochasticity / Small population paradigm</td>
+<td align="left"><a href="Regan_2002.pdf">Regan 2002</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">3/2/2017</td>
-<td align="left">LECTURE 2: Small-population paradigm</td>
-<td align="left">[MVP paper]</td>
+<td align="left">LECTURE 2: Small population paradigm / Population Viability Analysis (PVA)</td>
+<td align="left"><a href="beissinger1.pdf">Beissinger and Westphal 1998</a></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/3/2017</td>
-<td align="left">LAB: Group projects- getting started</td>
+<td align="left">LAB: Stochasticity and uncertainty</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
@@ -557,17 +563,18 @@ $(document).ready(function () {
 </tr>
 </tbody>
 </table>
-<pre><code>                  OTHER TOPICS                                                                                                OTHER READINGS                                           
-                  Parameter estimation; capture-recapture data                                                                Amstrup et al. Chap. 1                                   
-                  Estimate survival with open-population capture-recapture (program MARK)                                     Cooch and White Chaps 1,2                                
-                  Estimate survival with open-population capture-recapture (program MARK) (continued)                         Cooch and White Chaps 3,4                                
-                  Capture-recapture analysis  (continued)                                                                                                                              
-                  Assessing model performance and handling model uncertainty (e.g., sensitivity analysis, cross-validation)   Akçakaya et al 2005                                      
-                  Species Distribution Modeling in R. Defining habitat.                                                                                                                
-                  sensitivity and elasticity lab?                                                                                                                                      
-                  PVA1: Density-regulated, age-structured, stochastic population model                                                                                                 
-                                                                                                                                                                                       
-                  LECTURE 1: Detecting density dependence in natural populations                                              [Brook et al. 2006](brook1.pdf)                          </code></pre>
+<pre><code>                                                                                                                              [Hedrick and Kalinowski 2000](hedrick2000.pdf)  
+                  OTHER TOPICS                                                                                                OTHER READINGS                                  
+                  Parameter estimation; capture-recapture data                                                                Amstrup et al. Chap. 1                          
+                  Estimate survival with open-population capture-recapture (program MARK)                                     Cooch and White Chaps 1,2                       
+                  Estimate survival with open-population capture-recapture (program MARK) (continued)                         Cooch and White Chaps 3,4                       
+                  Capture-recapture analysis  (continued)                                                                                                                     
+                  Assessing model performance and handling model uncertainty (e.g., sensitivity analysis, cross-validation)   Akçakaya et al 2005                             
+                  Species Distribution Modeling in R. Defining habitat.                                                                                                       
+                  sensitivity and elasticity lab?                                                                                                                             
+                  PVA1: Density-regulated, age-structured, stochastic population model                                                                                        
+                                                                                                                                                                              
+                  LECTURE 1: Detecting density dependence in natural populations                                              [Brook et al. 2006](brook1.pdf)                 </code></pre>
 
 
 
