--- a/LECTURE3.html
+++ b/LECTURE3.html
@@ -314,6 +314,12 @@ div.tocify {
     <li>
       <a href="LECTURE8.html">Stochastic population models</a>
     </li>
+    <li>
+      <a href="LECTURE9.html">Small population paradigm</a>
+    </li>
+    <li>
+      <a href="LECTURE10.html">Declining population paradigm</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -336,7 +342,7 @@ div.tocify {
       <a href="LAB4.html">Lab 4: matrix population models (short)</a>
     </li>
     <li>
-      <a href="LAB5.html">Lab 5: stochasticity and uncertainty (short)</a>
+      <a href="LAB5.html">Lab 5: stochasticity and uncertainty</a>
     </li>
     <li>
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
