--- a/LECTURE8.html
+++ b/LECTURE8.html
@@ -314,6 +314,12 @@ div.tocify {
     <li>
       <a href="LECTURE8.html">Stochastic population models</a>
     </li>
+    <li>
+      <a href="LECTURE9.html">Small population paradigm</a>
+    </li>
+    <li>
+      <a href="LECTURE10.html">Declining population paradigm</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -336,7 +342,7 @@ div.tocify {
       <a href="LAB4.html">Lab 4: matrix population models (short)</a>
     </li>
     <li>
-      <a href="LAB5.html">Lab 5: stochasticity and uncertainty (short)</a>
+      <a href="LAB5.html">Lab 5: stochasticity and uncertainty</a>
     </li>
     <li>
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
@@ -372,7 +378,7 @@ div.tocify {
 <div id="uncertainty" class="section level2">
 <h2>Uncertainty!</h2>
 <p>All ecological systems are full of uncertainty. We all know it intuitively. But what <em>exactly</em> do we mean by that? And how can we deal with it? How can we incorporate it into our models?</p>
-<p>This is probably one of the most important modules in this course. But it is not in the Gotelli book, nor is it in most ecology textbooks.</p>
+<p>This is one of the most important modules in this course. But it is not in the Gotelli book, nor is it in highlighted in most ecology textbooks.</p>
 <div id="a-taxonomy-of-uncertainty" class="section level3">
 <h3>A taxonomy of uncertainty</h3>
 <p>There are two major reasons we can be uncertain. Either we <em>lack sufficient knowledge</em> or the <em>system itself is variable and unpredictable</em>. Let’s explore these two types of uncertainty.</p>
@@ -385,14 +391,22 @@ div.tocify {
 <div id="how-to-deal-with-uncertainty" class="section level2">
 <h2>How to deal with uncertainty</h2>
 <p>The key is to <strong>embrace uncertainty</strong>. As population ecologists, we have three major tools to help us manage and account for uncertainty in our study systems:</p>
+<div id="uncertainty-analysis" class="section level3">
+<h3>Uncertainty analysis</h3>
 <ol style="list-style-type: decimal">
-<li><p>First, what if we simply don’t have enough data to build a perfect model? This is an example of <em>lacking sufficient knowledge</em>. In this case, the tool we use is called <strong>sensitivity analysis</strong>. Basically, we try all plausible values and see what happens to our study system (e.g., does the population go extinct? decline?).</p></li>
+<li>First, what if we simply don’t have enough data to build a perfect model? This is an example of <em>lacking sufficient knowledge</em>. In this case, the tool we use is called <strong>uncertainty analysis</strong>. Basically, we try all plausible values (or just the minimum and maximum value) and see what happens to our study system (e.g., does the population go extinct? decline?). You should know – the term “sensitivity analysis” is often used for this concept, but InsightMaker uses this term in a different way (basically referring to multiple replicates of stochastic models) – so we will refer to this as “uncertainty analysis” to avoid confusion)</li>
+</ol>
+</div>
+<div id="stochastic-models-two-main-types" class="section level3">
+<h3>Stochastic models (two main types)</h3>
+<ol start="2" style="list-style-type: decimal">
 <li><p>Second, we usually can’t predict whether an individual will live or die, breed or not breed (whether an individual will “get lucky” so to speak!)? We might know the per-capita <em>probability</em> of breeding, or the <em>probability</em> of dying, or the per-capita <em>rate</em> of offspring production, or the probability of a given offspring being female. But when it comes to projecting who lives and dies, who gives birth and who doesn’t, how many females are born, we <em>just can’t know for sure</em>. This is an example of a system being <em>inherently unpredictable</em>. In population ecology this is called <strong>demographic stochasticity</strong>. In this case, the tool we use is <strong>computer-simulated “coin flipping”</strong>.</p></li>
-<li><p>Third, we usually can’t predict whether next year or the year after will be a good one or a bad one- that is, whether the vital rates will be more or less optimal year-to-year (whether a <em>population</em> will “get lucky”, so to speak). In population ecology this is called <strong>environmental Stochasticity</strong>. In this case, the tool we use is <strong>randomly varying vital-rates</strong>.</p></li>
+<li><p>Third, we usually can’t predict whether next year or the year after will be a good one or a bad one for a population- that is, whether the per-capita vital rates (e.g., <span class="math inline">\(b\)</span>, or <span class="math inline">\(d\)</span> or <span class="math inline">\(r\)</span>) will be more or less optimal year-to-year (whether a <em>population</em> will “get lucky”, so to speak). This is another example of a system being <em>inherently unpredictable</em>. In population ecology this is called <strong>environmental stochasticity</strong>. In this case, the tool we use is <strong>randomly varying vital-rates</strong>.</p></li>
 </ol>
 <div class="figure">
 <img src="dice1.png" />
 
+</div>
 </div>
 </div>
 <div id="random-number-generation" class="section level2">
@@ -410,7 +424,7 @@ div.tocify {
 </div>
 <div id="discrete-vs.continuous" class="section level3">
 <h3>Discrete vs. continuous</h3>
-<p>In <em>discrete distributions</em>, each outcome has a specific probability (like the probability of flipping a coin 10 times and getting 4 heads). For example, let’s consider the <em>binomial distribution</em></p>
+<p>In <em>discrete distributions</em>, each outcome has a specific probability (like the probability of flipping a coin 10 times and getting 4 heads). For example, let’s consider a <em>binomial distribution</em></p>
 <p><img src="LECTURE8_files/figure-html/unnamed-chunk-2-1.png" width="672" /></p>
 <p>Another discrete distribution we will use in this class is the <em>Poisson distribution</em>:</p>
 <p><img src="LECTURE8_files/figure-html/unnamed-chunk-3-1.png" width="672" /></p>
@@ -422,12 +436,59 @@ upper = 10
 curve(dunif(x,lower,upper),0,10,ylab=&quot;Probability (density)&quot;,xlab=&quot;Possibilities&quot;,main=&quot;Uniform distribution (continuous)&quot;,ylim=c(0,1))   # probability density</code></pre>
 <p><img src="LECTURE8_files/figure-html/unnamed-chunk-4-1.png" width="672" /></p>
 <p>This isn’t a very intersting looking distribution. All possible numbers from 0 to 10 are equally probable.</p>
-<p>Another continuous distribution you should know is called the <em>Normal distribution</em>.</p>
+<p>Another continuous distribution you should know is called the <em>Normal distribution</em>. This distribution has a lower bound of <span class="math inline">\(-\infty\)</span> and an upper bound of <span class="math inline">\(\infty\)</span>.</p>
+<p><strong>Q</strong> What population parameter might this distribution be useful for modeling?</p>
 <pre class="r"><code>mean = 7.1
 stdev = 1.9
 
 curve(dnorm(x,mean,stdev),0,15,ylab=&quot;Probability (density)&quot;,xlab=&quot;Possibilities&quot;,main=&quot;Normal distribution (continuous)&quot;)   # probability density</code></pre>
 <p><img src="LECTURE8_files/figure-html/unnamed-chunk-5-1.png" width="672" /></p>
+<p>Another continuous distribution you should know is called the <em>Lognormal distribution</em>. This distribution has a lower bound of zero and an upper bound of <span class="math inline">\(\infty\)</span>.</p>
+<p><strong>Q</strong> What population parameter might this distribution be useful for modeling?</p>
+<pre class="r"><code>meanlog = 1.4
+stdevlog = 0.6
+
+curve(dlnorm(x,meanlog,stdevlog),0,15,ylab=&quot;Probability (density)&quot;,xlab=&quot;Possibilities&quot;,main=&quot;Lognormal distribution (continuous)&quot;)   # probability density</code></pre>
+<p><img src="LECTURE8_files/figure-html/unnamed-chunk-6-1.png" width="672" /></p>
+<p>Another continuous distribution you should know is called the <em>Beta distribution</em>. This distribution has a lower bound of zero and an upper bound of 1.</p>
+<p><strong>Q</strong> What population parameter might this distribution be useful for modeling?</p>
+<pre class="r"><code>shape1 = 10
+shape2 = 4
+
+curve(dbeta(x,shape1,shape2),0,1,ylab=&quot;Probability (density)&quot;,xlab=&quot;Possibilities&quot;,main=&quot;Beta distribution (continuous)&quot;)   # probability density</code></pre>
+<p><img src="LECTURE8_files/figure-html/unnamed-chunk-7-1.png" width="672" /></p>
+</div>
+<div id="explore-distributions-in-r" class="section level3">
+<h3>Explore distributions in R</h3>
+<p>Let’s play around with distributions a little using R- you can access a web-based version of R called <a href="http://www.r-fiddle.org/#/">R-fiddle</a>.</p>
+<p>Note that all these distributions are also available to you in InsightMaker.</p>
+<p>Here’s some R syntax for you!</p>
+<p>Note that R random number generators start with the letter “r” – for “random”.</p>
+<p>The first <em>argument</em> represents how many random numbers you want R to draw from the specified distribution.</p>
+<p>The following arguments represent the <em>parameters</em> of the random distribution you wish to draw from.</p>
+<pre class="r"><code>### Binomial random number generator
+rbinom(1,size=10,prob=0.5)    # note: &quot;size&quot; is the number of coin flips, and &quot;prob&quot; is the probability of coming up heads
+
+### Poisson random number generator
+rpois(1,lambda=4.1)     # note: &quot;lambda&quot; represents the poisson mean (and variance!)
+
+### Uniform random number generator
+runif(1,min=1,max=3.5)   # &quot;min&quot; and &quot;max&quot; are pretty obvious!
+
+### Normal random number generator
+rnorm(1,mean=3,sd=4.1)   # normal distribution is defined by &quot;mean&quot; and &quot;sd&quot; (standard deviation).
+
+### lognormal random number generator (like normal distribution, but can not go below zero)
+rlnorm(1,meanlog=0.5,sdlog=0.2)    # lognormal distribution is defined by &quot;meanlog&quot;, the mean of the log-transformed random variable and &quot;sd&quot; (standard deviation of the log-transformed random variable).
+
+### beta random number generator (bounded between 0 and 1- just like survival rate!)
+rbeta(1,shape1=10,shape2=3)  # beta distribution is defined by &quot;shape1&quot; and &quot;shape2&quot;, which together define the mean and spread within the range from 0 to 1.</code></pre>
+<p>Finally, you can make up your own distribution!</p>
+<pre class="r"><code>distribution &lt;- c(5,3,5,4,3,6,4,5,5,1,6,5,4,3,6,6,4,2,8,4,4,5,2)
+hist(distribution,freq = F, ylab=&quot;Probability&quot;,xlab=&quot;Possibilities&quot;)  # visualize distribution</code></pre>
+<p><img src="LECTURE8_files/figure-html/unnamed-chunk-9-1.png" width="672" /></p>
+<pre class="r"><code>sample(distribution,1)  # take one random sample from this distribution!</code></pre>
+<pre><code>## [1] 4</code></pre>
 </div>
 <div id="in-class-exercise-stochasticity-and-uncertainty" class="section level3">
 <h3>In-Class Exercise: Stochasticity and Uncertainty</h3>
@@ -441,44 +502,58 @@ curve(dnorm(x,mean,stdev),0,15,ylab=&quot;Probability (density)&quot;,xlab=&quot
 <h4><em>Parameter Uncertainty</em></h4>
 <ol style="list-style-type: decimal">
 <li><p>Set <em>Birth rate</em> equal to 0.4 and <em>Death rate</em> equal to 0.3. Set initial abundance at 10. Under the “Settings” menu set the model to run for 10 years. Make sure your <em>Population</em> stock can not go negative (this is a setting in the configurations panel). Hit “Simulate”- you should see exponential growth!</p></li>
-<li><p><strong>Parameter uncertainty:</strong> What if we have imperfect knowledge about birth rate. The birth rate could be anything from 0.2 to 0.5. Run the model with the lowest and the highest possible birth rate.</p></li>
+<li><p><strong>Parameter uncertainty:</strong> What if we have imperfect knowledge about birth rate? The birth rate could be anything from 0.2 to 0.5. Run the model with the lowest and the highest possible birth rate.</p></li>
 <li><p>Now use the “Compare Results” tool (under the “Tools” menu in the upper right corner…) to visualize the range of possible population growth trajectories that would be possible given our <em>uncertainty</em> about birth rate.</p></li>
 </ol>
 <p><strong>Q</strong> What is the range of possible final abundances after 10 years?</p>
+<p><strong>Q</strong> Should we study this system more if we want to know whether the population is growing or declining??</p>
 </div>
 <div id="demographic-stochasticity" class="section level4">
 <h4><em>Demographic Stochasticity</em></h4>
 <ol style="list-style-type: decimal">
-<li>Set <em>Birth rate</em> back to 0.4. Hit “Simulate”- make sure you still see exponential growth!<br />
-</li>
-<li>We will use a <em>Binomial distribution</em> to represent the number of mortalities. That is, we flip a coin the same number of times as there are individuals in the population. If the coin comes up heads, then the individual dies. In this case we are using a biased coin- it only comes up heads 30% of the time! The <em>Binomial distribution</em> essentially represents the number of times heads came up. To do this in InsightMaker, use the following formula for the <em>Deaths</em> flow:</li>
+<li><p>Set <em>Birth rate</em> back to 0.4. Hit “Simulate”- make sure you still see exponential growth!</p></li>
+<li><p>We will use a <em>Binomial distribution</em> to represent the number of mortalities. That is, we <em>flip a coin the same number of times as there are individuals in the population</em>. If the coin comes up heads, then the individual dies. In this case we are using a biased coin- it only comes up heads 30% of the time! The <em>Binomial distribution</em> essentially represents the number of times heads came up. To do this in InsightMaker, use the following formula for the <em>Deaths</em> flow:</p></li>
 </ol>
 <pre><code>RandBinomial([Population], [Death rate])</code></pre>
-<p>In plain english: the number of deaths is equal to the number of “coin flips” that come out heads if the probability of getting heads is equal to [Death rate].</p>
-<p>For the birth rate, we will use the <em>Poisson</em> distribution. The Poisson distribution is often use to represent births, because there could feasibly be more births than there are individuals currently in the population (e.g., if all individuals have two offspring!). However, the maximum number of “heads” is the total number of individuals. To do this in InsightMaker, use the following formula for the <em>Births</em> flow:</p>
+<p>In plain english: the number of deaths is equal to the number of “coin flips” that come out heads if the probability of getting heads is equal to [Death rate] and the number of flips is equal to [Abundance].</p>
+<p>For the total births, <span class="math inline">\(B\)</span> we will use the <em>Poisson</em> distribution. The Poisson distribution is often use to represent births, because there could feasibly be more births than there are individuals currently in the population (e.g., if all individuals have two offspring!). This would not be possible with a binomial distribution! That is, the maximum number of “heads” (you can always think of binomial distributions as coin-flipping!) is the total number of individuals.</p>
+<p>To do this in InsightMaker, use the following formula for the <em>Births</em> flow:</p>
 <pre><code>RandPoisson([Population]*[Birth rate])</code></pre>
-<p>In plain english: the number of births is a Poisson-distributed random number with mean equal to [Population]*[Birth rate].</p>
+<p>In plain english: the number of births is a random draw from a Poisson random number generator with mean equal to the expected number of births ([Population]*[Birth rate]).</p>
 <ol start="3" style="list-style-type: decimal">
 <li>Run the simulation. What does it look like?</li>
-<li>Use the “Sensitivity Testing” tool (in the “Tools” menu, upper right corner) to run the model 50 times. Choose [Population] as the “Monitored Primitive”.</li>
-<li>Change the initial abundance to 500 and re-run the “Sensitivity Testing” tool.</li>
 </ol>
-<p><strong>Q</strong> Is the effect of demographic stochasticity bigger at low or high abundances?</p>
+<p><strong>Correction</strong>, 2/28/2017: I identified a bug with the Poisson distribution in InsightMaker- it doesn’t work when the expected number of offspring exceeds about 750! So until they fix the bug, you would need to use an IF-THEN-ELSE statement to use the Poisson only where their algorithm actually works!</p>
+<p><strong>Correction</strong>, 3/1/2017: The bug has been fixed!</p>
+<ol start="4" style="list-style-type: decimal">
+<li><p>Use the “Sensitivity Testing” tool (in the “Tools” menu, upper right corner) to run the model 50 times. Choose [Population] as the “Monitored Primitive”.</p></li>
+<li><p>Change the initial abundance to 500 and re-run the “Sensitivity Testing” tool.</p></li>
+</ol>
+<p><strong>Q</strong> Is the effect of <em>demographic stochasticity</em> bigger at low or high abundances?</p>
 </div>
 <div id="environmental-stochasticity" class="section level4">
 <h4><em>Environmental Stochasticity</em></h4>
 <ol style="list-style-type: decimal">
-<li>Set <em>Births</em> back to what it was before ([Population]<em>[Birth rate]), and do the same for </em>Deaths*.</li>
+<li>Set <em>Births</em> back to what it was before ([Population]x[Birth rate]), and do the same for <em>Deaths</em>.</li>
 <li>We will use a <em>Normal distribution</em> to represent how the birth rate changes each year. This could represent climatic variablity – “good years” and “bad years”. The <em>Normal distribution</em> is commonly used for this type of variability- it is characterized by an average value (<strong>mean</strong>) and a variability measure (<strong>standard deviation</strong>). To do this in InsightMaker, use the following formula for the <em>Birth Rate</em> variable:</li>
 </ol>
 <pre><code>RandNormal(0.4, 0.4)</code></pre>
-<p>Similarly, use the following formula for the <em>Birth Rate</em> variable:</p>
+<p>Similarly, use the following formula for the <em>Death Rate</em> variable:</p>
 <pre><code>RandNormal(0.3, 0.3)</code></pre>
 <ol start="3" style="list-style-type: decimal">
 <li><p>Use the “Sensitivity Testing” tool (in the “Tools” menu, upper right corner) to run the model 50 times. Choose [Population] as the “Monitored Primitive”.</p></li>
 <li><p>Change the initial abundance to 500 and re-run the “Sensitivity Testing” tool.</p></li>
 </ol>
-<p><strong>Q</strong> Is the effect of environmental stochasticity bigger at low or high abundances?</p>
+<p><strong>Q</strong> Is the effect of <em>environmental stochasticity</em> bigger at low or high abundances?</p>
+<ol start="6" style="list-style-type: decimal">
+<li>Note that the normal distribution CAN go below zero or above 1, which is not always biologically realistic! As we saw above, you could use a different distribution! OR you could just <strong>truncate</strong> the normal distribution to behave more realistically. That is, if the random number you draw comes out below zero, just make it zero!</li>
+</ol>
+<p>For birth rate, this can be done like this:</p>
+<pre><code>Max(0,RandNormal(0.4, 0.4))</code></pre>
+<p>You could also use an IF-THEN-ELSE statement to do this…</p>
+<p><strong>Q</strong> Can you modify survival rate to constrain the random number between 0 and 1?</p>
+<p>Re-run the model with the modified/constrained random vital rates.</p>
+<p><strong>Q</strong> (harder question!) Under what circumstances can you envision small populations being more vulnerable to environmental stochasticity than large populations?</p>
 <p><a href="LECTURE9.html">–go to next lecture–</a></p>
 </div>
 </div>
